kubernetes/apps/default/mayan-edms/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mayan-edms
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "mayan.${cluster_domain}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia-forwardauth
      backendRefs:
        - name: mayan-edms-mayanedms-frontend
          port: 8000
